private-hosting/zigbee/service-zigbee2mqtt.yaml
apiVersion: v1
kind: Service
metadata: { name: zigbee2mqtt, namespace: zigbee }
spec:
  selector: { app.kubernetes.io/name: zigbee2mqtt }
  ports:
    - { name: http, port: 8080, targetPort: http }
