private-hosting/zigbee/ingress-zigbee2mqtt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  namespace: zigbee
spec:
  ingressClassName: traefik
  rules:
    - host: zigbee.lab.theoboursy.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port: { number: 8080 }
